--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,10 @@ target_link_libraries(backend-test PUBLIC mnemosyne)
 add_executable(record-test record-test.cpp)
 target_link_libraries(record-test PUBLIC mnemosyne)
 
+add_executable(replication-counter-test replication-counter-test.cpp)
+target_include_directories(replication-counter-test PUBLIC ../src)
+target_link_libraries(replication-counter-test PUBLIC mnemosyne)
+
 add_executable(dag-sync-test dag-sync-test.cpp)
 target_link_libraries(dag-sync-test PUBLIC mnemosyne)
 
